# cleaning-mode

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/helpers/: system_tray.rs
src/Components/bubbles/: bubble.types.ts  bubbles.component.tsx  bubbles.styles.ts
src/Components/bubbles/helpers/: retina-fix.helper.ts
src/assets/styles/: global.ts
